[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
#sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ,"with-json"] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros", "mock" ] }
dotenv = "0.15.0"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.6.0"
serde_json = "1.0.116"

[build-dependencies]
tonic-build = "0.8"


[[bin]]
name = "server"
path = "src/main.rs"